reset block structur

--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,7 @@
 }
  /* utilities */
  
- img{
-    width: 100%;
- }
+
 
  .border{
     border: 1px dashed red;
@@ -42,66 +40,45 @@
      right: 0;
  }
 /* main */
-
 main{
-    height: calc(100vh - 100px);
-    
+    width: 100%;
+    display: flex;
+}
+
+
+.main-container{
+    width: 100%;
+    height: calc(100vh - 90px);
     background-color: #141922;
-    display: flex;
+    overflow: auto;
     color: #fff;
-    
-    overflow-y: auto;
 }
 
-.row{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-    margin: 20px 0;
-}
 
-.col{
-    width: calc(100% / 5 - 10px);
-    min-height: 30px;
-
-}
-
-.card{
-    min-height: 100px;
-}
 
 /* side-nav */
 .side-nav{
-    height: 100%;
+   
+    padding: 0 10px;
     width: 300px;
+    height: calc(100vh - 90px);
     background-color: #000000;
-    
-    position: sticky;
-    left: 0%;
-    bottom: 0%;
-    top: 0%;
+    color: #fff;
 
 }
 /* content */
 
-.content{
-    width: 75%;
-}
-
-.content-nav{
-    text-align: center;
-    margin-top: 90px;
-}
 
 
 /* footer */
 footer{
-    height: 100px;
-    background-color: #282828;
-    color: #fff;
-
+    z-index: 1;
+    width: 100%;
+    height: 90px;
+    background-color: #2e2e2e;
     
 }
+
 
 @media screen and (max-width: 556px) {
     /* side-nav */
