--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
  
  .container{
     margin: 10px;
-    padding-top: 100px;
+    padding-top: 10px;
  }
 
 
@@ -220,13 +220,37 @@ main{
 
 /* footer */
 footer{
-    z-index: 1;
+    
     width: 100%;
     height: 90px;
     background-color: #2e2e2e;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.curent-song{
+    display: flex;
+    align-items: center;
+    color: #707070;
+}
+figure{
+    width: 50px;
+    height: 50px;
+    margin-left: 20px;
     
 }
 
+.curent-song-title{
+    color: #fff;
+    margin-left: 10px;
+    margin-right: 20px;
+}
+
+.subtitle.reproduction{
+    font-size: xx-small;
+    margin-top: 0rem;
+}
 
 /***********medium  ***************/
 
