--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,6 @@ main{
 }
 
 
-/* content */
 
 
 
@@ -228,7 +227,7 @@ footer{
     justify-content: space-between;
     align-items: center;
 }
-
+/* curent song */
 .curent-song{
     display: flex;
     align-items: center;
@@ -251,6 +250,64 @@ figure{
     font-size: xx-small;
     margin-top: 0rem;
 }
+
+/* footer media player */
+
+.curent-song-mediaplayer{
+    color: white;
+    text-align: center;
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.mediaplayer-interaction i{
+    font-size: 15px;
+    margin: 0 5px;
+ 
+}
+
+.mediaplayer-interaction .fa-circle-play{
+    font-size: 30px;
+    vertical-align: middle;
+    margin: 5px 10px;
+}
+
+.play-bar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.bar{
+    width: 80%;
+    height: 4px;
+    background-color: #5A5A5A;
+    border-radius: 5px;
+}
+
+.moving-bar{
+    position: relative;
+    width: 30%;
+    height: 100%;
+    background-color: #C1C1C1;
+    border-radius: 5px;
+}
+
+.fa-circle{
+
+    position: absolute;
+    top: -6px;
+    right: 0;
+    color: white;
+}
+
+
+
+
+
 
 /***********medium  ***************/
 
