--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
     border: 1px solid #fff;
     border-radius: 20px;
     padding: 10px 20px;
-    background-color: #000000;
+    background-color: transparent;
     color: #fff;
     margin-top: 20px;
     cursor: pointer;
@@ -119,12 +119,13 @@ h6{
 
     text-align: right;
      height: 80px;
-     background-color: #000000;
-     opacity: 0.3;
+     background-color:rgba(39, 38, 38, 0.6);
+     
      position: sticky;
      top: 0;
      left: 0;
      right: 0;
+     z-index: 2;
  }
 /* main */
 main{
