--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,13 @@
     margin-left: -10px;
 }
 
+.border-bottom{
+    border-bottom: 2px solid #608E1A;
+    width: 38%;
+    position: relative;
+    left: 28px;
+}
+
 
 
 
